--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+                 android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
