--- a/app-engine-server/app.yaml
+++ b/app-engine-server/app.yaml
@@ -1,13 +1,14 @@
 application: price-comp
 version: 1
-runtime: python25
+runtime: python27
 api_version: 1
+threadsafe : true
 
 default_expiration: "5d"
 
 builtins:
 - appstats: on
-- datastore_admin: on
+#- datastore_admin: on
 - deferred: on
 - remote_api: on
 
@@ -15,16 +16,16 @@ inbound_services:
 - warmup
 
 handlers:
-- url: /favicon.ico
-  static_files: application/static/img/favicon.ico
-  upload: application/static/img/favicon.ico
-
-- url: /robots.txt
-  static_files: application/static/robots.txt
-  upload: application/static/robots.txt
-
-- url: /static
-  static_dir: application/static
+#- url: /favicon.ico
+#  static_files: application/static/img/favicon.ico
+#  upload: application/static/img/favicon.ico
+#
+#- url: /robots.txt
+#  static_files: application/static/robots.txt
+#  upload: application/static/robots.txt
+#
+#- url: /static
+#  static_dir: application/static
 
 - url: .*
-  script: main.py
+  script: main.app
