--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -8,8 +8,10 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:theme="@android:style/Theme.Holo.Light">
+        <uses-library android:name="com.google.android.maps"/>
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
