--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -25,13 +25,13 @@
                 <category android:name="android.intent.category.ALTERNATIVE" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddPriceDialogFragment">
+        <activity android:name=".AddPriceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.ALTERNATIVE" />
             </intent-filter>
         </activity>
-        <activity android:name=".StoreSelectDialogFragment">
+        <activity android:name=".StoreSelectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.ALTERNATIVE" />
