--- a/app-engine-server/index.yaml
+++ b/app-engine-server/index.yaml
@@ -32,3 +32,9 @@ indexes:
   properties:
   - name: good
   - name: price
+
+- kind: Price
+  properties:
+  - name: good
+  - name: store
+  - name: price
